WebStore/src/objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ItemCategory__c</fullName>
        <label>ItemCategory</label>
        <referenceTo>ItemCategory__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <formula>IMAGE( Picture_URL__c , &quot;Preview&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>